doLabels: add margin to avoid handle overlapping label

--- a/autoform-nouislider.css
+++ b/autoform-nouislider.css
@@ -3,6 +3,7 @@
   align-items: center;
 }
 .at-nouislider .nouislider-container .nouislider {
+  margin: 0px 25px; /* avoid handle overlapping label */
   flex-basis: 100%;
   flex-grow: 1;
 }
